# HackArena2.0-MonoTanks-Rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/agent/: mod.rs
src/agent_trait/: mod.rs
src/args/: mod.rs
src/bot/: mod.rs
src/bot_trait/: mod.rs
src/game/: agent_response.rs  agent_trait.rs  game_info.rs  mod.rs
src/game/agent_response/: mod.rs  move_direction.rs  rotation.rs
src/game/game_state/: bullet.rs  direction.rs  mod.rs  player.rs  tank.rs  tile.rs  turret.rs  zone.rs
src/game/game_state/parser/: mod.rs
src/game/lobby_data/: mod.rs  server_settings.rs
src/ws_client/: mod.rs  writer_task.rs  ws_client.rs
src/ws_client/handlers/: handle_game_ended.rs  handle_game_starting.rs  handle_next_move.rs  handle_on_warning_received.rs  handle_prepare_to_game.rs  mod.rs
src/ws_client/packet/: empty_payload.rs  mod.rs  packet.rs  packet_type_enum.rs  warning.rs
src/ws_client/packet/dto/: bullet.rs  direction.rs  game_end.rs  game_state.rs  mod.rs  move_direction.rs  player.rs  rotation.rs  tank.rs  tile.rs  turret.rs  zone.rs
src/ws_client/packet/dto/lobby_data/: mod.rs  server_settings.rs
src/ws_client/packet/dto/raw_game_state/: map.rs  mod.rs
src/ws_client/packet/packets/: mod.rs
src/ws_client/packet/packets/agent_response/: ability_type.rs  agent_response.rs  mod.rs  move_direction.rs  rotation.rs
src/ws_client/packet/packets/bot_response/: ability_type.rs  bot_response.rs  mod.rs  rotation.rs
src/ws_client/packet/packets/game_end/: game_end.rs  game_end_player.rs  mod.rs
src/ws_client/packet/packets/game_state/: game_state.rs  mod.rs  player.rs
src/ws_client/packet/packets/game_state/raw_game_state/: map.rs
src/ws_client/packet/packets/game_state/tile/: bullet.rs  direction.rs  item.rs  laser.rs  mine.rs  mod.rs  tank.rs  tile.rs  turret.rs
src/ws_client/packet/packets/lobby_data/: lobby_player.rs  mod.rs  server_settings.rs
