[package]
name = "HackArena2_0_MonoTanks_Rust"
version = "0.1.0"
edition = "2021"
authors = ["KN init"]
description = "MonoTanks API wrapper in Rust for HackArena 2.0 organized by KN init. The api wrapper is used to communicate with the server using WebSocket protocol. And your task is to implement bot logic. Each time the game state updates on the server, it is send to you and you have to respond with your move. The game is played on a 2D grid. The player with the most points at the end of the game wins. Let the best bot win!"

[dependencies]
tokio-tungstenite = "0.23.1"
tokio = { version = "1.38.1", features = ["full"] }
tokio-util = "0.7.12"
futures-util = "0.3.17"
futures-channel = "0.3.17"
url = "2.5.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rand = "0.8.5"
clap = { version = "4.5.11", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
